# bs_linux

./: .gitignore  ANTICHEAT_BYPASS_GUIDE.md  AUDIT.md  App.js  CMakeLists.txt  INJECTOR_GUIDE.md  OFFSETS_GUIDE.md  README.md  app.json  build.sh  inject.sh  package-lock.json  package.json
SDK/: BaseGeneralLog.py  GeneralLog.py  GlobalData.py  netdetecter.py  patchmpk.py  switches.py
SDK/HelenFramework/: helen_define.py
SDK/channel/: channel_util.py  sdk_define.py
SDK/engine/Lib/: Timer.py
SDK/gclient/: cconst.py  client_env.py  config.py  debug_init_script.py  entitylist.py  gate_client.py  graph_index_map.py  lang.py
SDK/gclient/data/: __init__.py  ab_test_condition_data.py  acquire_methods_data.py  act_big_event_mark_data.py  act_big_event_tips_data.py  act_combat_guide_data.py  act_combat_guide_pic_data.py  act_combat_guide_reward_data.py  act_combat_privileges_data.py  act_crystal_data.py  act_first_pay2_data.py  act_first_pay_data.py  act_first_pay_quality_data.py  act_first_pay_txt_data.py  act_first_reward_data.py  act_gun_skin_recall_progress_data.py  act_gun_skin_recall_setting_data.py  act_point_data.py  act_purchase_data.py  activity_data.py  actor_variables_data.py  airdrop_support_data.py  all_gain_box_data.py  annual_review_common_data.py  annual_review_data.py  area_clue_data.py  area_task_data.py  assist_aim_challenge_data.py  assist_aim_data.py  assist_aim_expert_data.py  assist_aim_expert_low_end_data.py  assist_aim_low_end_data.py  autofire_data.py  bank_function_data.py  bank_milestone_data.py  bank_price_data.py  bank_rank_data.py  begin_guide_condition_data.py  begin_guide_data.py  begin_guide_message_data.py  (+298 more)
SDK/gclient/data_lang/: __init__.py  lang_index.py
SDK/gclient/framework/: __init__.py
SDK/gclient/gameplay/: __init__.py  game_logic_base.py
SDK/gclient/gamesystem/: __init__.py
SDK/gclient/local/: __init__.py  lang_en.py  lang_ui_en.py  language.py
SDK/gclient/logic/: __init__.py  croom.py  cteam.py
SDK/gclient/ui/: __init__.py
SDK/gclient/util/: CinematicsBase.py  CinematicsImp.py  __init__.py  ab_test_util.py  beard_util.py  cc_client.py  cc_util.py  cclan_util.py  cdata_util.py  cglobal_op.py  chat_util.py  common_ui_util.py  debug.py  debug_draw_util.py  debugger.py  decorators.py  easing.py  engine_variable_modifier.py  fix_buildin.py  friend_util.py  graph_hotfix_util.py  gun_shoot_util.py  gun_skin_util.py  gun_ui_util.py  gun_upgrade_util.py  (+20 more)
SDK/gshare/: common_util.py  consts.py  decorators.py  effect_util.py  exp_util.py  filter_util.py  formula.py  hall_box_util.py  hall_item_util.py  iactivity.py  iairdrop.py  ibuff.py  icc_voice.py  ichat.py  iclan.py  icombat_item.py  icombat_record.py  icredit.py  ihall_backpack.py  imagic_field.py  imall.py  iqualifying.py  irecruit.py  ireplay.py  irobot.py  irookie.py  iroom.py  iteam.py  item_check_util.py  ivehicle.py  izone.py  naviagtor_util.py  pubsub.py  time_hook.py  time_util.py  utils.py  weapon_bone_infos.py  weapon_old_style_guise_ids.py  weapon_util.py
arduino/pixelbot_arduino/: pixelbot_arduino.ino
docs/: CPYTHON_INTEGRATION.md  INJECTION_ENGINE_FIX.md
dumps/: export_20260402_061600.json  export_20260402_102133.json  functions_20260402_102133.txt  names_20260402_102133.txt  objects_20260402_102133.txt  offsets_20260402_061600.txt  offsets_20260402_102133.txt
ios/: Podfile
ios/BloodStrikeLoader/: Info.plist
ios/BloodStrikeLoader.xcodeproj/: project.pbxproj
server/: bridge.js
src/: aimbot.cpp  aimbot.h  anticheat_bypass.h  cheat_features.cpp  cheat_features.h  entity_manager.cpp  entity_manager.h  esp.cpp  esp.h  game_offsets.h  hooks.cpp  hooks.h  injector.cpp  injector.h  injector_main.cpp  input.cpp  input.h  loader_gui.cpp  main.cpp  menu.cpp  menu.h  offset_scanner.cpp  offset_scanner.h  offsets.h  pixelbot.cpp  pixelbot.h  renderer.cpp  renderer.h  skin_changer.cpp  skin_changer.h  stealth_injector.cpp  stealth_injector.h
(+1411 files in other folders)
